HelloUltraviolet/Fixtures/RejectedSource/Parallelism/ExecutionDomainsDiagnostics/Expected.uv
//! Expected diagnostic metadata for the ExecutionDomainsDiagnostics rejected-source specimen.

expectedDiagnostic("E-CON-0156", "diagnostics.20.ExecutionDomains")
